--- a/Pertemuan1.ipynb
+++ b/Pertemuan1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIO1Rk/dARnG9s0fpOjiD0",
+      "authorship_tag": "ABX9TyNZcMRS6pCfPK1dp0J/w1Ue",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "WZv2LU2RnFF8"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as np\n",
+        "import cv2 as cv\n",
+        "from google.colab.patches import cv2_imshow\n",
+        "from skimage import io, transform\n",
+        "from PIL import Image\n",
+        "import matplotlib.pylab as plt"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# membuat list untuk menyimpan url dari beberapa image\n",
+        "urls = [\n",
+        "    \"https://picsum.photos/200/300\", # Added comma here\n",
+        "    \"https://picsum.photos/200/300\",\n",
+        "]\n",
+        "\n",
+        "# baca dan tampilkan image\n",
+        "# loop pada tiap url image, beberapa image dapat disimpan pada list\n",
+        "for url in urls:\n",
+        "  try:\n",
+        "    image = io.imread(url)\n",
+        "    # Check if image is loaded successfully\n",
+        "    if image is not None:\n",
+        "      image = cv.resize(image, (0,0), fx=0.5, fy=0.5)\n",
+        "      image_2 = cv.cvtColor(image, cv.COLOR_BGR2RGB)\n",
+        "      final_frame = cv.hconcat((image, image_2))\n",
+        "      cv2_imshow(final_frame)\n",
+        "      print('\\n') # Corrected newline character\n",
+        "    else:\n",
+        "      print(f\"Could not load image from {url}\")\n",
+        "  except Exception as e:\n",
+        "    print(f\"An error occurred while processing {url}: {e}\")"
+      ],
+      "metadata": {
+        "id": "04fIMCBRo19w"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
